--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.3.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^5.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
